# zephyr-sandbox

./: .clangd  .gitignore  CMakeLists.txt  Kconfig  README.md  build.sh  build_bbc.sh  build_nrf52840dk.sh  openocd-jlink.cfg  west.yml
.west/: config
app/: CMakeLists.txt  CMakePresets.json  debug.conf  prj.conf
app-407/: CMakeLists.txt  prj.conf
app-407/boards/: black_f407ve.overlay
app-407/src/: main.c
app-cdc/: CMakeLists.txt  prj.conf
app-cdc/boards/: stm32_min_dev.overlay
app-cdc/src/: main.c
app-esp32c3/: CMakeLists.txt  prj.conf  sample.yaml
app-esp32c3/include/: pwm.h
app-esp32c3/src/: main.c
app-mb2/: CMakeLists.txt  prj.conf  sample.yaml
app-mb2/boards/: bbc_microbit_v2.overlay
app-mb2/src/: lsm303_ll.c  lsm303_ll.h  main.c
app-rfl/: CMakeLists.txt  debug.conf  prj.conf  sample.yaml
app-rfl/boards/: rocket_flight_logger.overlay
app-rfl/include/: at_client.h
app-rfl/src/: main.c
app-rfl/src/at_client/: at_client.c
app/boards/: bbc_microbit.overlay  nucleo_l476rg.overlay  rocket_flight_logger.overlay  stm32_min_dev.overlay
app/src/: main.c
boards/custom/rfl_test/: Kconfig.rfl_test  README.md  board.cmake  board.yml  rfl_test.dts  rfl_test.yaml
boards/custom/rocket_flight_logger/: Kconfig.rocket_flight_logger  README.md  board.cmake  board.yml  rocket_flight_logger.dts  rocket_flight_logger.yaml  rocket_flight_logger_defconfig
drivers/: CMakeLists.txt
drivers/display/: CMakeLists.txt  Kconfig
drivers/display/sitronix/: CMakeLists.txt  (+1 more)
samples/uart_irq/: CMakeLists.txt  debug.conf  sample.yaml
zephyr/: module.yml
(+7 files in other folders)
